<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/almostBlack"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:text="@string/forgot"
        android:textAlignment="center"
        android:textColor="@color/almostWhite"
        android:textSize="@dimen/title_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView6"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:text="@string/reset"
        android:textAlignment="center"
        android:textColor="@color/almostWhite"
        android:textSize="@dimen/normal_size"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView5"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView5"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/et_background"
        app:layout_constraintEnd_toEndOf="@+id/appCompatTextView6"
        app:layout_constraintStart_toStartOf="@+id/appCompatTextView6"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView6">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email_reset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:background="@android:color/transparent"
            android:hint="@string/email"
            android:maxLines="1"
            android:textColor="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@color/red_cancel"
        android:id="@+id/btn_cancel"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/almostWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/btn_accept"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

    <androidx.appcompat.widget.AppCompatButton
        android:background="@color/green_confirm"
        android:id="@+id/btn_accept"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:text="@string/accept"
        android:textColor="@color/almostWhite"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_cancel"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

</androidx.constraintlayout.widget.ConstraintLayout>